[gd_scene load_steps=5 format=3 uid="uid://dg85ujdg1caio"]

[ext_resource type="Script" path="res://Bumper_Ships/Laser/Laser.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dtcqok72st0xr" path="res://Bumper_Ships/Laser/laserRed01.png" id="2"]

[sub_resource type="PhysicsMaterial" id="1"]
friction = 0.0
bounce = 1.0

[sub_resource type="CircleShape2D" id="2"]
radius = 4.37846

[node name="Laser" type="RigidBody2D"]
collision_layer = 8
collision_mask = 19
mass = 0.01
physics_material_override = SubResource("1")
gravity_scale = 0.0
max_contacts_reported = 1
contact_monitor = true
can_sleep = false
script = ExtResource("1")
speed = 700.0
damage = 3.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-22, 0)
texture = ExtResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("2")

[node name="Despawn_Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_Laser_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_Laser_body_shape_entered"]
[connection signal="timeout" from="Despawn_Timer" to="." method="_on_Despawn_Timer_timeout"]
